# argon2rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  search-index.js  travis.sh
argon2rs/: argon2i_simple.v.html  enum.ParamErr.html  enum.Variant.html  fn.argon2d_simple.html  fn.argon2i_simple.html  index.html  sidebar-items.js  struct.Argon2.html
argon2rs/argon2/: Argon2.t.html  ParamErr.t.html  argon2d_simple.v.html  enum.ParamErr.html  enum.Variant.html  fn.argon2d_simple.html  fn.argon2i_simple.html  sidebar-items.js  struct.Argon2.html
argon2rs/argon2/defaults/: KIB.v.html  LANES.v.html  constant.KIB.html  constant.LANES.html  constant.LENGTH.html  constant.PASSES.html  index.html  sidebar-items.js
argon2rs/defaults/: PASSES.v.html  constant.KIB.html  constant.LANES.html  constant.LENGTH.html  constant.PASSES.html  index.html  sidebar-items.js
argon2rs/verifier/: constant_eq.v.html  enum.DecodeError.html  fn.constant_eq.html  index.html  sidebar-items.js  struct.Encoded.html
benches/: constant_eq.rs  versus_cargon.rs
benches/cargon/: Cargo.toml  build.rs  lib.rs
examples/: cli.rs  helloworld.rs  simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
src/: argon2.rs  block.rs  lib.rs  octword.rs  sse2.rs  verifier.rs  workers.rs
src/argon2rs/: argon2.rs.html  block.rs.html  lib.rs.html  octword.rs.html  verifier.rs.html  workers.rs.html
src/workers/: mod.rs  no_threadpool.rs  threadpool.rs
(+6 files in other folders)
