[package]
name = "argon2rs"
version = "0.2.0"
authors = ["bryant <bryant@defrag.in>"]
repository = "https://github.com/bryant/argon2rs"
documentation = "http://bryant.github.io/argon2rs/"
description = "The pure Rust password hashing library that runs on Argon2."
readme = "README.md"
keywords = ["crypto", "argon2", "argon2i", "argon2d", "hash"]
license = "MIT"

[features]
default = []
simd = ["blake2-rfc/simd_asm"]

[dependencies]
blake2-rfc = "0.2.16"
crossbeam = "0.2.5"
